ws-slo/apps/catbox/overlays/nishir-tailnet/patch-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: catbox
  annotations:
    tailscale.com/hostname: catbox
    tailscale.com/tags: tag:automata,tag:catbox
spec:
  loadBalancerClass: tailscale
