ws-slo/apps/catbox/overlays/nishir-tailnet/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: catbox
  namespace: shikanime
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: tailscale-system
      ports:
        - port: ssh
        - port: mdns
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/instance: hermes-agent
              app.kubernetes.io/name: hermes-agent
      ports:
        - port: ssh
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: catbox
      app.kubernetes.io/name: catbox
  policyTypes:
    - Ingress
